src/global.scss
:root {
    //Colors
    --theme-color: #005EB8;
    --dark: #171617;
    --gold: #FFD700;

    //Fonts
    --main-font: "Sedan SC", serif;
    --title-font: "Lobster Two";
}

body {
    font-family: var(--main-font);
    color: #fff;
    background-color: var(--dark);

    overflow-x: hidden;
}

#root {
    display: grid;
    grid-template-rows: auto 1fr auto;
    min-height: 100vh;

    @media (max-width: 1024px) {
        display: flex;
        flex-direction: column;
    }
}

main {
    padding-block: 4rem;

    @media (max-width: 1024px) {
        padding-block: 2rem;
        flex: 1;
    }
}

//Resets
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

::before, ::after {
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: #fff;
}

//Container
.container {
    max-width: 1366px;
    margin: 0 auto;

    @media (max-width: 768px) {
        max-width: none;
    }
}

